# zetachain-notifier

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: pyinstaller.yaml
notifier/: README.md  api.py  broadcast.py  build.spec  config.py  config.yaml.dist  discord_notifier.py  fetch_updates.py  format_updates.py  main.py  notify.py  pyproject.toml  requirements.txt  sent_updates.pkl  slack_notifier.py  statuspage_notifier.py  telegram_notifier.py  utils.py
