[project]
name = "notifier"
version = "0.1.0"
description = "This notifies interested parties of events relating to Zetachain."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "feedparser>=6.0.11",
    "humanize>=4.11.0",
    "loguru>=0.7.2",
    "python-dateutil>=2.9.0.post0",
    "python-telegram-bot>=21.7",
    "requests>=2.32.3",
    "telegram>=0.0.1",
]
